--- a/reports/phpunit.xml
+++ b/reports/phpunit.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-  <testsuite name="/Users/ismailatkurt/Code/Php/php-base-project-with-composer/tests/unittests/Models" tests="1" assertions="1" errors="0" warnings="0" failures="0" skipped="0" time="0.017688">
-    <testsuite name="App\Unittests\Models\BaseTest" file="/Users/ismailatkurt/Code/Php/php-base-project-with-composer/tests/unittests/Models/BaseTest.php" tests="1" assertions="1" errors="0" warnings="0" failures="0" skipped="0" time="0.017688">
-      <testcase name="foo_field_can_be_updated" class="App\Unittests\Models\BaseTest" classname="App.Unittests.Models.BaseTest" file="/Users/ismailatkurt/Code/Php/php-base-project-with-composer/tests/unittests/Models/BaseTest.php" line="21" assertions="1" time="0.017688"/>
+  <testsuite name="/Users/ismailatkurt/Code/Php/php-base-project-with-composer/tests/unittests/Services" tests="1" assertions="2" errors="0" warnings="0" failures="0" skipped="0" time="0.012964">
+    <testsuite name="App\Unittests\Services\BaseServiceTest" file="/Users/ismailatkurt/Code/Php/php-base-project-with-composer/tests/unittests/Services/BaseServiceTest.php" tests="1" assertions="2" errors="0" warnings="0" failures="0" skipped="0" time="0.012964">
+      <testcase name="create_instance_of_base_model" class="App\Unittests\Services\BaseServiceTest" classname="App.Unittests.Services.BaseServiceTest" file="/Users/ismailatkurt/Code/Php/php-base-project-with-composer/tests/unittests/Services/BaseServiceTest.php" line="12" assertions="2" time="0.012964"/>
     </testsuite>
   </testsuite>
 </testsuites>
